themes/mukurtu_v4/css/style.css
/*! See https://eduardoboucas.github.io/include-media/ for detailed
documentation on how to use @include media(). */
/*! Drupal visually-hidden CSS class that hides content from visual users and
   shows content to screen reader users. */
*,
*::before,
*::after {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html {
  font-size: 100%;
  scroll-behavior: smooth;
  overflow-x: hidden;
}
@media screen and (prefers-reduced-motion: reduce) {
  html {
    scroll-behavior: initial;
  }
}

body {
  margin: 0;
  color: var(--brand-text-color);
  font-size: var(--font-size-base);
  font-family: var(--font-display-face);
  line-height: var(--line-height-base);
  text-rendering: optimizelegibility;
  -webkit-font-smoothing: antialiased;
}

ul li,
ol li {
  margin: 0;
  line-height: var(--line-height-base);
}

ul li {
  list-style-type: square;
}
ul li::marker {
  color: var(--accent-secondary);
}

p {
  margin-block: 0 var(--v-space-4xxs);
}

.field__item p:last-of-type {
  -webkit-margin-after: 0;
          margin-block-end: 0;
}

dl,
dt,
dd {
  margin: 0;
}

address {
  font-style: normal;
}

img {
  max-inline-size: 100%;
  block-size: auto;
  display: block;
}

a {
  color: var(--brand-primary-dark);
  -webkit-text-decoration: underline solid 2px var(--brand-primary-dark);
          text-decoration: underline solid 2px var(--brand-primary-dark);
  -webkit-transition: color 0.12s ease-in, text-decoration-color 0.12s ease-in;
  transition: color 0.12s ease-in, text-decoration-color 0.12s ease-in;
}
a:hover {
  text-decoration-color: var(--color-transparent);
  -webkit-transition: text-decoration-color 0.12s ease-in;
  transition: text-decoration-color 0.12s ease-in;
}
a:hover, a:focus, a:focus-visible, a:active {
  color: var(--brand-secondary-dark);
}
a:focus, a:focus-visible, a:active {
  outline: var(--focus-color) solid 2px;
  text-decoration-color: var(--color-transparent);
}
.layout-container a {
  font-family: var(--font-display-face);
}

input:focus,
select:focus {
  outline: var(--focus-color) solid 2px;
  outline-offset: 2px;
}

label {
  font-weight: 700;
}

.clipboard-item {
  position: relative;
}

.visually-hidden {
  position: absolute !important;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  inline-size: 0.063rem;
  block-size: 0.063rem;
  word-wrap: normal;
}

.line-clamp-2 {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
}
/* ... */

